<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.abmoje.MainActivity" >

        <item android:id="@+id/ActionBar"
        android:title=""
        android:icon="@android:drawable/ic_dialog_dialer"
        android:showAsAction="ifRoom" >
			<menu>
    
    	    	<item android:id="@+id/pomiary"
        		android:title="@string/pomiary"
        		android:icon="@android:drawable/ic_menu_compass"
          		android:showAsAction="ifRoom" />
     
    			<item android:id="@+id/historia"
        		android:title="@string/historia"
        		android:icon="@android:drawable/ic_menu_today"
          		android:showAsAction="ifRoom" />
    		
    			<item android:id="@+id/informacje"
        		android:title="@string/informacje"
        		android:icon="@android:drawable/ic_menu_info_details"
          		android:showAsAction="ifRoom" />
     
    			<item android:id="@+id/ustawienia"
        		android:title="@string/ustawienia"
        		android:icon="@android:drawable/ic_menu_manage"
          		android:showAsAction="ifRoom" />
    		
    			<item android:id="@+id/wylacz"
        		android:title="@string/wylacz"
        		android:icon="@android:drawable/ic_lock_power_off"
          		android:showAsAction="ifRoom" >
					<menu>
 	       		
 	       				<item android:id="@+id/wylaczTak"
        				android:title="@string/wylaczTak"
          				android:showAsAction="never" />
    		
    					<item android:id="@+id/wylaczNie"
        				android:title="@string/wylaczNie"
          				android:showAsAction="never" />
    		
    				</menu>
				</item>  
						 		
			</menu>
		</item> 
	  
</menu>