<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gps_mojatrasa.Info$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/gps"
        android:textColor="#FF8C00"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:checkedButton="@+id/radio1">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked1"
            android:text="@string/radio1"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:onClick="onRadioButtonClicked1"
            android:text="@string/radio2"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked1"
            android:text="@string/radio3"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:checkedButton="@+id/radio4">

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="@string/radio4"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="@string/radio5"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:textColor="#FF8C00"
        android:text="@string/jednostka"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/zapis"
        android:onClick="zapis"
        android:text="@string/zapis"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="16dp"
        android:text="menu"
        android:textSize="20sp"
        android:onClick="showMenu"
        android:textStyle="bold|italic" />

</RelativeLayout>