<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jakkot.gps_mojatrasa.Pomiary$PlaceholderFragment" >

<TextView
        android:id="@+id/czas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@drawable/tlo"
        android:gravity="center"
        android:text="@string/czas"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/predkosc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dystans"
        android:layout_alignRight="@+id/dystans"
        android:layout_below="@+id/dystans"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/tlo"
        android:gravity="center"
        android:text="@string/predkosc"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/dystans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/czas"
        android:layout_alignRight="@+id/czas"
        android:layout_below="@+id/czas"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/tlo"
        android:gravity="center"
        android:text="@string/dystans"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/srednia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/predkosc"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:enabled="false"
        android:onClick="start"
        android:background="@drawable/start" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:enabled="false"
        android:onClick="stop"
        android:background="@drawable/stop" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/wyszukiwanie"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_centerHorizontal="true"
        android:text="@string/dlugosc"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitude"
        android:layout_centerHorizontal="true"
        android:text="@string/szerokosc"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/pauza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start"
        android:layout_below="@+id/latitude"
        android:background="@drawable/pausa"
        android:enabled="false"
        android:onClick="pauza" />

</RelativeLayout>