<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jakkot.gps_mojatrasa.Pomiary$PlaceholderFragment" >

    <TextView
        android:id="@+id/historia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/statystyki"
        android:textColor="#FF8C00"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dystans"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/lczas"
        android:textColor="#00BFFF"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/godziny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/minuty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/godziny"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sekundy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minuty"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dystans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/historia"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/ldys"
        android:textColor="#00BFFF"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/srednia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sekundy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:text="" />

</RelativeLayout>